2006-10-10  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updates for release
	* NEWS: updates for release
	* README: updates for release
	* THANKS: updates for release
	* doc/man/strxns.refs: updates for release
	* doc/man/man4/ip_strm_mod.4.man: updates for release
	* doc/man/man4/ip_to_dlpi.4.man: updates for release
	* doc/man/man4/ldl.4.man: updates for release
	* doc/man/man7/CD_READ_REQ.7.man: updates for release
	* doc/man/man7/CD_WRITE_READ_REQ.7.man: updates for release
	* doc/man/man7/DL_ATTACH_REQ.7.man: updates for release
	* doc/man/man7/DL_BIND_ACK.7.man: updates for release
	* doc/man/man7/DL_CONNECT_CON.7.man: updates for release
	* doc/man/man7/DL_CONNECT_IND.7.man: updates for release
	* doc/man/man7/DL_CONNECT_REQ.7.man: updates for release
	* doc/man/man8/ldlconfig.8.man: updates for release
	* doc/man/man8/ldltest.8.man: updates for release
	* doc/manual/descrip.texi: updates for release

2006-10-06  Brian Bidulock  <bidulock@openss7.org>

	* doc/man/man7/DL_XID_CON.7.man: corrected for make check

2006-10-05  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updates for release
	* NEWS: updates for release
	* README: updates for release
	* THANKS: updates for release
	* doc/manual/descrip.texi: updates for release
	* doc/manual/news.texi: updates for release
	* doc/manual/todo.texi: updates for release

2006-10-03  Brian Bidulock  <bidulock@openss7.org>

	* configure.ac: added config file
	* doc/manual/news.texi: updated release notes
	* Makefile.am: remove AUTOCONFIG_H
	* src/include/Makefile.am: parameterized
	* src/include/sys/strxns/version.h.in: added comments

	* src/include/sys/strxns/config.h.in: added config.h file

2006-10-02  Brian Bidulock  <bidulock@openss7.org>

	* strxns.spec.in: corrections, cooked manpages and documentation
	* debian/changelog: notes
	* debian/copyright: added licenses
	* debian/strxns-core.postinst.in: copyright header updates
	* debian/strxns-core.postrm.in: copyright header updates