@@ -2,7 +2,7 @@
 # BEGINNING OF SEPARATE COPYRIGHT MATERIAL vim: ft=config sw=4 noet nocindent
 # =============================================================================
 # 
-# @(#) $RCSfile: acinclude.m4,v $ $Name:  $($Revision: 0.9.2.46 $) $Date: 2006/09/18 13:20:17 $
+# @(#) $RCSfile: acinclude.m4,v $ $Name:  $($Revision: 0.9.2.47 $) $Date: 2006/10/12 10:28:37 $
 #
 # -----------------------------------------------------------------------------
 #
@@ -47,7 +47,7 @@
 #
 # -----------------------------------------------------------------------------
 #
-# Last Modified $Date: 2006/09/18 13:20:17 $ by $Author: brian $
+# Last Modified $Date: 2006/10/12 10:28:37 $ by $Author: brian $
 #
 # =============================================================================
 
@@ -181,38 +181,6 @@ AC_DEFUN([_XNS_CHECK_XNS], [dnl
 # =============================================================================
 
 # =============================================================================
-# _XNS_SETUP_DEBUG
-# -----------------------------------------------------------------------------
-AC_DEFUN([_XNS_SETUP_DEBUG], [dnl
-    case "$linux_cv_debug" in
-    _DEBUG)
-	AC_DEFINE_UNQUOTED([XNS_CONFIG_DEBUG], [], [Define to perform
-			    internal structure tracking within XNS as well as
-			    to provide additional /proc filesystem files for
-			    examining internal structures.])
-	;;
-    _TEST)
-	AC_DEFINE_UNQUOTED([XNS_CONFIG_TEST], [], [Define to perform
-			    performance testing with debugging.  This mode
-			    does not dump massive amounts of information into
-			    system logs, but peforms all assertion checks.])
-	;;
-    _SAFE)
-	AC_DEFINE_UNQUOTED([XNS_CONFIG_SAFE], [], [Define to perform
-			    fundamental assertion checks.  This is a safer
-			    mode of operation.])
-	;;
-    _NONE | *)
-	AC_DEFINE_UNQUOTED([XNS_CONFIG_NONE], [], [Define to perform no
-			    assertion checks but report software errors.  This
-			    is the smallest footprint, highest performance
-			    mode of operation.])
-	;;
-    esac
-])# _XNS_SETUP_DEBUG
-# =============================================================================
-
-# =============================================================================
 # _XNS_OTHER_SCTP
 # -----------------------------------------------------------------------------
 AC_DEFUN([_XNS_OTHER_SCTP], [dnl
@@ -276,6 +244,8 @@ AC_DEFUN([_XNS_SETUP], [dnl
     _LINUX_KERNEL
     _LINUX_DEVFS
     _GENKSYMS
+    # here we have our flags set and can perform preprocessor and compiler
+    # checks on the kernel
     _LINUX_STREAMS
     _STRCOMP
 dnl with_xns='yes'
@@ -285,7 +255,6 @@ dnl _XOPEN
     _XNS_OTHER_SCTP
     _XNS_SETUP_MODULE
     _XNS_CONFIG_KERNEL
-    _XNS_SETUP_DEBUG
 ])# _XNS_SETUP
 # =============================================================================
 
